# collision-perception_system_for_quadrotor

./: README.md
Modeling/: 3寸桨.SLDPRT  RCinpower 1404电机.SLDPRT  电池碳板.SLDPRT  足球外壳整体.SLDASM  足球外壳整体.SLDPRT  足球外壳连接件.SLDPRT  足球外框零件.SLDPRT  铝柱10mm.SLDPRT  铝柱45mm.SLDPRT  飞塔H7+Tekko32 F4 4in1.SLDPRT
Modeling/750mAh电池/: 1.p2m  2.p2m  3.p2m  4.p2m  5.p2m  6.p2m  750mAh电池.SLDPRT
Modeling/Xavier NX + 冬虫电子/: Xavier NX + 冬虫电子.SLDPRT
PCB/: Legend_PVDF.hex  PVDF_Drone.PrjPcb  PVDF_Drone.SchDoc
ROS_Code/: CMakeLists.txt  package.xml
ROS_Code/launch/: pvdf.launch
ROS_Code/msg/: pvdf_msg.msg
ROS_Code/src/: pvdf_scan.cpp
STM32_Code/: .cproject  .mxproject  .project  Legend_PVDF Debug.launch  Legend_PVDF.ioc
STM32_Code/.metadata/: .log4j2.xml  version.ini
STM32_Code/.metadata/.plugins/org.eclipse.cdt.core/: sds.1704626543249.pdom  sds.language.settings.xml
STM32_Code/.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
STM32_Code/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
STM32_Code/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
STM32_Code/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
STM32_Code/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
STM32_Code/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
STM32_Code/Debug/: Legend_PVDF.elf  Legend_PVDF.hex  Legend_PVDF.list  Legend_PVDF.map  makefile
STM32_Code/Debug/Core/Src/: main.cyclo  main.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su
(+3 files in other folders)
